enterprise-chaos-hub/faults/kubernetes/pod-memory-hog/k8s-fault.yaml
---
apiVersion: litmuchaos.io/v1alpha1
kind: K8sFault
metadata:
  name: pod-memory-hog
spec:
  definition:
    targets:
      appinfo:
        applabel: ""
        appkind: ""
        appns: ""
    chaos:
      experiment: pod-memory-hog
      serviceAccountName: litmus-admin
      image: docker.io/harness/chaos-ddcr-faults:1.41.0
      imagePullPolicy: Always
      env:
        - name: TOTAL_CHAOS_DURATION
          value: "60" # in seconds

        # Enter the amount of memory in megabytes to be consumed by the application pod
        - name: MEMORY_CONSUMPTION
          value: "500"

        ## Number of workers to perform stress
        - name: NUMBER_OF_WORKERS
          value: "1"

        ## Percentage of total pods to target
        - name: POD_AFFECTED_PERCENTAGE
          value: ""

        ## provide the cluster runtime
        - name: CONTAINER_RUNTIME
          value: "containerd"

        # provide the socket file path
        - name: SOCKET_PATH
          value: "/run/containerd/containerd.sock"

        - name: LIB_IMAGE
          value: docker.io/harness/chaos-ddcr-faults:1.41.0

        ## Period to wait before and after injection of chaos in sec
        - name: RAMP_TIME
          value: ""

        ## it defines the sequence of chaos execution for multiple target pods
        ## supported values: serial, parallel
        - name: SEQUENCE
          value: "parallel"

        - name: TARGET_CONTAINER
          value: ""

        - name: TARGET_PODS
          value: ""

        # To select pods on specific node(s)
        - name: NODE_LABEL
          value: ""
